--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
+pnpm-debug.log*
 
 # Firebase cache
 .firebase/
@@ -62,20 +62,9 @@ node_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-.DS_Store
-node_modules
-/dist
-
-
 # local env files
 .env.local
 .env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -85,3 +74,6 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+.DS_Store
+dist
