--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -1,15 +1,23 @@
 {
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  },
   "functions": {
     "source": "functions"
   },
   "database": {
-    "rules": "database.rules.json"
+    "rules": "rules/database.rules.json"
   },
   "firestore": {
-    "rules": "firestore.rules"
+    "rules": "rules/firestore.rules"
   },
   "storage": {
-    "rules": "storage.rules"
+    "rules": "rules/storage.rules"
   },
   "emulators": {
     "auth": {
