firebaseのクライアントを作成

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+NODE_ENV=development
+DEFAULT_STORAGE_BUKET_NAME=default
+
 # リモート環境用
 # FIREBASE_API_KEY=
 # FIREBASE_AUTH_DOMAIN=
@@ -5,3 +8,10 @@
 # FIREBASE_DB_URL=
 # FIREBASE_PROJECT_ID=
 # FIREBASE_MESSAGING_SENDER_ID=
+# FIREBASE_APP_ID=
+# FIREBASE_MEASUREMENT_ID=
+
+# ローカル環境用
+FIREBASE_EMULATOR_HOST=0.0.0.0
+FIREBASE_STORAGE_EMULATOR_PORT=9000
+FIRESTORE_EMULATOR_HOST=8081
