--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
+    "firebase": "^9.5.0",
     "vue": "^3.2.23",
     "vue-class-component": "^8.0.0-rc.1"
   },
