github actions 編集

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - ./firebase/.firebaserc:/firebase/.firebaserc
       - ./firebase/firebase.json:/firebase/firebase.json
       - ./firebase/firestore.indexes.json:/firebase/firestore.indexes.json
-      - ./app/dist:/firebase/dist
+      - ./app/dist:/firebase/public
       - ./docker/firebase/emulators:/root/.cache/firebase/emulators
     environment:
       - FIREBASE_STORAGE_EMULATOR_HOST=0.0.0.0:9199
