--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -8,16 +8,21 @@
     ]
   },
   "functions": {
-    "source": "functions"
+    "source": "functions",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   },
   "database": {
     "rules": "rules/database.rules.json"
   },
   "firestore": {
-    "rules": "rules/firestore.rules"
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "storage": {
-    "rules": "rules/storage.rules"
+    "rules": "storage.rules"
   },
   "emulators": {
     "auth": {
@@ -53,5 +58,8 @@
       "host": "0.0.0.0",
       "port": 4000
     }
+  },
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
   }
 }
